Run RIVEMU with `-no-window` option on CI

--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -35,7 +35,7 @@ jobs:
       - name: Verify RIVEMU and SDK installation
         run: |
           rivemu -version
-          rivemu -sdk -exec gcc --version
+          rivemu -quiet -no-window -sdk -exec gcc --version
 
       # Build the project
       - name: Build the project
