--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -49,11 +49,32 @@ jobs:
             exit 1
           fi
 
+      # Determine if prerelease
+      - name: Determine prerelease status
+        id: determine_prerelease
+        run: |
+          if [[ "${GITHUB_REF_NAME}" =~ alpha|beta|rc ]]; then
+            echo "PRERELEASE=true" >> $GITHUB_ENV
+          else
+            echo "PRERELEASE=false" >> $GITHUB_ENV
+
+      # Create or update the GitHub Release
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: ${{ github.ref_name }}
+          draft: false
+          prerelease: ${{ env.PRERELEASE }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       # Upload to GitHub Release
       - name: Upload Release Asset
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./wordslide.sqfs
           asset_name: wordslide.sqfs
           asset_content_type: application/octet-stream
